--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,10 @@
 				<h1>Welcome to the home page</h1>
 			</div>
 			<div>
-				<h3><a th:href="@{/list_users}">List All Users</a></h3>
+				<h3><a th:href="@{/users}">Users</a></h3>
+				<h3><a th:href="@{/clients}">Clients</a></h3>
+				<h3><a th:href="@{/jobs}">Jobs</a></h3>
+				
 				<h3><a th:href="@{/register}">Register</a></h3>
 				<h3><a th:href="@{/login}">Login</a></h3>
 			</div>
